@@ -3,6 +3,7 @@ launchpad-buildd (190) UNRELEASED; urgency=medium
   * Switch to git; add Vcs-* fields.
   * Always call Resource.putChild with path as bytes.
   * Switch RotatableFileLogObserver from class advice to a class decorator.
+  * Work around /proc/self/fd-related test hang on Python >= 3.3.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Apr 2020 10:19:27 +0100
 
